--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Self Introduce Card</title>
     <link rel="stylesheet" href="style.css">
+    <!-- font link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="wrapper">
@@ -32,7 +36,7 @@
             <p class="btn"> Voir le défi</p>
             <div class="socials-group">
                 <a href="#"><img src="./assets/socials/facebook-svgrepo-com.svg" alt=""></a>
-                <a href="#"><img src="./assets/socials/github-142-svgrepo-com.svg" alt=""></a>
+                <a href="#"><img src="./assets/socials/github-svgrepo-com.svg" alt=""></a>
                 <a href="#"><img src="./assets/socials/linkedin-svgrepo-com.svg" alt=""></a>
             </div>
         </div>
