feat(app.js): add particlesjs

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <!-- particlesjs -->
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js" defer></script>
+    <script src="app.js" defer></script>
 </head>
 <body>
-    <div class="wrapper">
+    <div class="wrapper" id="particles-js">
         <div class="card">
             <div class="title">
                 <img src="./assets/flask-thin-svgrepo-com.svg" alt="flask thin">
