add socials profil link

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
             <p class="btn"> Voir le défi</p>
             <div class="socials-group">
-                <a href="#"><img src="./assets/socials/facebook-svgrepo-com.svg" alt=""></a>
-                <a href="#"><img src="./assets/socials/github-svgrepo-com.svg" alt=""></a>
+                <a href="https://web.facebook.com/tems.mj/"><img src="./assets/socials/facebook-svgrepo-com.svg" alt=""></a>
+                <a href="https://github.com/Jinolyn"><img src="./assets/socials/github-svgrepo-com.svg" alt=""></a>
                 <a href="#"><img src="./assets/socials/linkedin-svgrepo-com.svg" alt=""></a>
             </div>
         </div>
